# onesdk

./: .gitinnore
include/: IPlugin.h  IPluginCustom.h  IPluginFee.h  IPluginUser.h  SDKManager.h
proj.as/: .gitignore  gradle.properties  settings.gradle
proj.as/gradle/wrapper/: gradle-wrapper.properties
proj.as/onesdk/: .gitignore  build.gradle
proj.as/onesdk/src/main/: AndroidManifest.xml
proj.as/onesdk/src/main/cpp/: CMakeLists.txt
proj.as/onesdk/src/main/cpp/include/: IPlugin.h  IPluginAds.h  IPluginCustom.h  IPluginFee.h  IPluginUser.h  JniHelper.h  PluginDefines.h  SDKManager.h  onesdk.h
proj.as/onesdk/src/main/cpp/protocol/: IPlugin.cpp  JniHelper.cpp  PluginFactory.cpp  PluginFactory.h  PluginMacros.h  PluginManager.cpp  PluginManager.h  PluginUtils.cpp  PluginUtils.h  SDKManager.cpp  WrapperAds.cpp  WrapperAds.h  WrapperCustom.cpp  WrapperCustom.h  WrapperFee.cpp  WrapperFee.h  WrapperUser.cpp  WrapperUser.h
proj.as/onesdk/src/main/java/tech/mxin/onesdk/framework/: IActivityCallback.java  IActivityLifeCycle.java  IApplicationLifeCycle.java  NativeInvoker.java  OneApplication.java  SDKHelper.java  SDKLogger.java  SDKUtils.java  SDKWrapper.java
proj.as/onesdk/src/main/java/tech/mxin/onesdk/framework/mock/: ILoginCallback.java  MockAds.java  MockCustom.java  MockFee.java  MockUser.java  MockUtils.java
proj.as/onesdk/src/main/java/tech/mxin/onesdk/framework/protocol/: Interface.java  InterfaceAds.java  InterfaceCustom.java  InterfaceFee.java  InterfaceUser.java
proj.as/onesdk/src/main/java/tech/mxin/onesdk/framework/wrapper/: AdsWrapper.java  CustomWrapper.java  FeeWrapper.java  UserWrapper.java
proj.ios/: .gitignore  Podfile
proj.ios/app/app/: AppDelegate.h  AppDelegate.m  SceneDelegate.h  SceneDelegate.m  ViewController.h  ViewController.m  main.m
proj.ios/app/app.xcodeproj/: project.pbxproj
proj.ios/onesdk/onesdk/: onesdk.h
proj.ios/onesdk/onesdk.xcodeproj/: project.pbxproj
proj.ios/onesdk/onesdk.xcodeproj/xcuserdata/macos.xcuserdatad/xcschemes/: xcschememanagement.plist
